--- a/server/homework04/package.json
+++ b/server/homework04/package.json
@@ -25,9 +25,12 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.1",
+    "apollo-server-express": "^3.1.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "graphql": "^15.5.1",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
