--- a/server/homework04/package.json
+++ b/server/homework04/package.json
@@ -30,6 +30,7 @@
     "class-validator": "^0.13.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "graphql": "^15.5.1",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
